cmake_minimum_required(VERSION 2.8)
PROJECT(IceT_Tutorial)
FIND_PACKAGE(IceT REQUIRED)
INCLUDE_DIRECTORIES(${ICET_INCLUDE_DIRS})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(MPI REQUIRED)
MARK_AS_ADVANCED(CLEAR
MPI_INCLUDE_PATH
MPI_LIBRARY
MPI_EXTRA_LIBRARY
)
INCLUDE_DIRECTORIES(
${OPENGL_INCLUDE_DIR}
${MPI_INCLUDE_PATH}
${GLUT_INCLUDE_DIR}
)
ADD_EXECUTABLE(Tutorial Tutorial.cpp)
TARGET_LINK_LIBRARIES(Tutorial
${OPENGL_LIBRARIES}
${GLUT_LIBRARIES}
${MPI_LIBRARY}
${MPI_EXTRA_LIBRARY}
${ICET_CORE_LIBS}
${ICET_GL_LIBS}
${ICET_MPI_LIBS}
)
